--- a/øving4/rust/Cargo.toml
+++ b/øving4/rust/Cargo.toml
@@ -1,9 +1,7 @@
-[package]
-name = "oving4"
-version = "0.1.0"
-edition = "2021"
+[workspace]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-tokio = { version = "1", features = ["full"] }
+members = [
+    "udp_calculator",
+    "multicast_receiver",
+    "multicast_sender"
+]
