--- a/øving5/rust/Cargo.toml
+++ b/øving5/rust/Cargo.toml
@@ -1,8 +1,2 @@
-[package]
-name = "oving5"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
+[workspace]
+members = ["compiler_backend", "webserver"]
